fixed issue with navigation in mobile.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 <div class="flbackdrop"></div>
 
 <header class="relPosition fixedHeader">
-    <div class="menuBar" id="autoHide">
+    <div class="menuBar slide headroom--top" id="autoHide">
         <div class="row expanded">
             <div class="small-6 medium-3 columns">
                 <div id="logo">
@@ -31,8 +31,6 @@
                         {% endif %}
                         <li class="navLink">
                             <a class="navIcon" href="https://www.twitter.com/{{ site.twitter_username }}"><span class="icon-twitter"></span></a>
-                            <!--<a class="navIcon" href="#"><span class="icon-facebook"></span></a>
-                            <a class="navIcon" href="#"><span class="icon-google-plus"></span></a>-->
                         </li>
                     </ul>
                 </div>
