--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,10 @@
 {% include head.html %}
 <body class="pageBorder">
     {% include header.html %}
-    {{ content }}
-    {% include footer.html %}
+    <div class="mainWrapper">
+        {{ content }}
+        {% include footer.html %}
+    </div>
     {% include scripts.html %}
 </body>
 </html>
