--- a/css/compiled-foundation.css
+++ b/css/compiled-foundation.css
@@ -2147,7 +2147,7 @@ input:disabled, input[readonly],
 textarea:disabled,
 textarea[readonly] {
   background-color: #e6e6e6;
-  cursor: default;
+  cursor: not-allowed;
 }
 
 [type='submit'],
@@ -2327,7 +2327,7 @@ select {
 
 select:disabled {
   background-color: #e6e6e6;
-  cursor: default;
+  cursor: not-allowed;
 }
 
 select::-ms-expand {
@@ -2413,7 +2413,7 @@ select[multiple] {
   border: 1px solid #e6e6e6;
   border-bottom: 0;
   background-color: #fefefe;
-  color: #121212;
+  color: #0a0a0a;
 }
 
 :last-child > .accordion-content:last-child {
