--- a/css/compiled-foundation.css
+++ b/css/compiled-foundation.css
@@ -2128,11 +2128,6 @@ textarea::-webkit-input-placeholder {
   color: #cacaca;
 }
 
-input::-moz-placeholder,
-textarea::-moz-placeholder {
-  color: #cacaca;
-}
-
 input:-ms-input-placeholder,
 textarea:-ms-input-placeholder {
   color: #cacaca;
@@ -4204,44 +4199,36 @@ table {
   border-radius: 0;
 }
 
-table thead,
-table tbody,
-table tfoot {
+thead, tbody, tfoot {
   border: 1px solid #f1f1f1;
   background-color: #fefefe;
 }
 
-table caption {
+caption {
   font-weight: bold;
   padding: 0.5rem 0.625rem 0.625rem;
 }
 
-table thead,
-table tfoot {
+thead, tfoot {
   background: #f8f8f8;
   color: #0a0a0a;
 }
 
-table thead tr,
-table tfoot tr {
+thead tr, tfoot tr {
   background: transparent;
 }
 
-table thead th,
-table thead td,
-table tfoot th,
-table tfoot td {
+thead th, thead td, tfoot th, tfoot td {
   padding: 0.5rem 0.625rem 0.625rem;
   font-weight: bold;
   text-align: left;
 }
 
-table tbody tr:nth-child(even) {
+tbody tr:nth-child(even) {
   background-color: #f1f1f1;
 }
 
-table tbody th,
-table tbody td {
+tbody th, tbody td {
   padding: 0.5rem 0.625rem 0.625rem;
 }
 
