--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,4 @@
-<head>
+﻿<head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,7 +8,7 @@
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
     <link rel="shortcut icon" href="/img/favicons/favicon-32x32.png">
     <link href='https://fonts.googleapis.com/css?family=Anaheim%7CQuattrocento+Sans:400,400italic,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="{{ "/css/compiled-foundation.css" | prepend: site.baseurl }}" />
+    <link rel="stylesheet" href="{{ "/css/bliss.css" | prepend: site.baseurl }}" />
     <link rel="stylesheet" href="{{ "/css/app.css" | prepend: site.baseurl }}" />
     <link rel="stylesheet" href="{{ "/css/icomoon.css" | prepend: site.baseurl }}" />
     <link rel="stylesheet" href="{{ "/css/responsive.css" | prepend: site.baseurl }}" />
