switched over to more standardized way of managing themes.

--- a/_sass/app.scss
+++ b/_sass/app.scss
@@ -1,6 +1,6 @@
 ﻿/*------------------------------------------------------------------
 
-    Description: Bliss Framwork Master SCSS
+    Description: Bliss Framwork app.scss
     Version: 0.0.1
 
 -------------------------------------------------------------------*/
@@ -12,9 +12,6 @@
 
 //this imports foundation from bower_components
 @import 'foundation';
-
-//this imports _theme.scss that is in the same directory as this file
-@import 'theme';
 
 //this imports motion-ui from bower_copmonents
 @import 'motion-ui';
