--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
     <link rel="shortcut icon" href="/img/favicons/favicon-32x32.png">
     <link href='https://fonts.googleapis.com/css?family=Anaheim%7CQuattrocento+Sans:400,400italic,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="{{ "/css/bliss.css" | prepend: site.baseurl }}" />
+    <link rel="stylesheet" href="{{ "/css/theme.css" | prepend: site.baseurl }}" />
     <link rel="stylesheet" href="{{ "/css/app.css" | prepend: site.baseurl }}" />
     <link rel="stylesheet" href="{{ "/css/icomoon.css" | prepend: site.baseurl }}" />
     <link rel="stylesheet" href="{{ "/css/responsive.css" | prepend: site.baseurl }}" />
