gulp source commit

--- a/css/gem.css
+++ b/css/gem.css
@@ -9,6 +9,11 @@
 
 -------------------------------------------------------------------*/
 
+/*------------------------------------------------------------------
+rs: note that this was formerly called app.css, but I renamed it to
+avoid confusion with the foundation app.scss file.
+-------------------------------------------------------------------*/
+
 /* ==============================================================
               BASIC COLORS
 ================================================================= */
