--- a/css/theme.css
+++ b/css/theme.css
@@ -11,6 +11,12 @@
     Version: 0.0.1
 
 -------------------------------------------------------------------*/
+/*------------------------------------------------------------------
+
+    Description: Bliss Framwork _settings.scss
+    Version: 0.0.1
+
+-------------------------------------------------------------------*/
 /**
  * Foundation for Sites by ZURB
  * Version 6.2.3
