updates to gulp file and life fitness test page for buy buttons

--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -7,5 +7,5 @@
 
 @charset 'utf-8';
 
-//this imports _settings.scss that is in the same directory as this file
+//this imports _app.scss that is in the same directory as this file
 @import 'app';
