--- a/_sass/_settings.scss
+++ b/_sass/_settings.scss
@@ -1,3 +1,10 @@
+/*------------------------------------------------------------------
+
+    Description: Bliss Framwork _settings.scss
+    Version: 0.0.1
+
+-------------------------------------------------------------------*/
+
 //  Foundation for Sites Settings
 //  -----------------------------
 //
