restructured site to have separate pages

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,14 +20,18 @@
                     <ul data-magellan data-animation-duration="800" data-bar-offset="50">
                         {% if page.url == "/" %}
                         <li class="navLink"><a href="#home">Home</a></li>
-                        <li class="navLink"><a href="#difference">Difference</a></li>
                         <li class="navLink"><a href="#services">Services</a></li>
-                        <li class="navLink"><a href="#tech">Technologies</a></li>
+                        <li class="navLink"><a href="/whoweare">Who we are</a></li>
+                        <li class="navLink"><a href="/technologies">Technologies</a></li>
                         <li class="navLink"><a href="/blog">Blog</a></li>
                         <li class="navLink"><a href="#contact-form">Contact</a></li>
                         {% else %}
                         <li class="navLink"><a href="/">Home</a></li>
+                        <li class="navLink"><a href="/#services">Services</a></li>
+                        <li class="navLink"><a href="/whoweare">Who we are</a></li>
+                        <li class="navLink"><a href="/technologies">Technologies</a></li>
                         <li class="navLink"><a href="/blog">Blog</a></li>
+                        <li class="navLink"><a href="/#contact-form">Contact</a></li>
                         {% endif %}
                         <li class="navLink">
                             <a class="navIcon" href="https://www.twitter.com/{{ site.twitter_username }}"><span class="icon-twitter"></span></a>
