gulp source commit

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,7 +27,7 @@
                         <li class="navLink"><a href="#contact-form">Contact</a></li>
                         {% else %}
                         <li class="navLink"><a href="/">Home</a></li>
-                        <li class="navLink"><a href="/#services">Services</a></li>
+                        <li class="navLink"><a href="/">Services</a></li>
                         <li class="navLink"><a href="/whoweare">Who we are</a></li>
                         <li class="navLink"><a href="/technologies">Technologies</a></li>
                         <li class="navLink"><a href="/blog">Blog</a></li>
