changed all encodings from UTF-8 with BOM to UTF-8 because Jekyll hates BOM

--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -1,4 +1,4 @@
-﻿/*------------------------------------------------------------------
+/*------------------------------------------------------------------
 
     Description: Bliss Framwork theme.scss
     Version: 0.0.1
