--- a/_sass/app.scss
+++ b/_sass/app.scss
@@ -1,4 +1,4 @@
-﻿/*------------------------------------------------------------------
+/*------------------------------------------------------------------
 
     Description: Bliss Framwork app.scss
     Version: 0.0.1
